--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-10-29 Sat 06:53 -->
+<!-- 2022-10-29 Sat 08:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -52,7 +52,7 @@ evilify</a></li>
 <div id="outline-container-to-install" class="outline-2">
 <h2 id="to-install">to install</h2>
 <div class="outline-text-2" id="text-to-install">
-<pre class="example" id="orge25c90e">
+<pre class="example" id="orgc0be75a">
        (use-package aiern-aiernhide-state
          :load-path "path/where/you/cloned/aiern-aiernhide-state")
 </pre>
@@ -62,7 +62,7 @@ evilify</a></li>
 <div id="outline-container-example" class="outline-2">
 <h2 id="example">example</h2>
 <div class="outline-text-2" id="text-example">
-<pre class="example" id="orgc2d01fe">
+<pre class="example" id="org242ae43">
        (use-package dired
          :defer t
          :config
@@ -92,7 +92,7 @@ evilify</a></li>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-10-29 Sat 06:53</p>
+<p class="date">Created: 2022-10-29 Sat 08:04</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
